vertical alignment issue with last reply

--- a/bubblebbs/static/style.css
+++ b/bubblebbs/static/style.css
@@ -177,6 +177,7 @@ a:hover {
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline-block;
+  vertical-align: top;
 }
 
 .list-thread .meta {
